@@ -82,6 +82,39 @@ typedef struct
     INT       code;
 } DEBUGHOOKINFO, *LPDEBUGHOOKINFO;
 
+/*
+ * Low level hook flags
+ */
+#define LLKHF_EXTENDED       0x00000001
+#define LLKHF_INJECTED       0x00000010
+#define LLKHF_ALTDOWN        0x00000020
+#define LLKHF_UP             0x00000080
+
+#define LLMHF_INJECTED       0x00000001
+
+/*
+ * Structure used by WH_KEYBOARD_LL
+ */
+typedef struct tagKBDLLHOOKSTRUCT {
+    DWORD   vkCode;
+    DWORD   scanCode;
+    DWORD   flags;
+    DWORD   time;
+    DWORD   dwExtraInfo;
+} KBDLLHOOKSTRUCT, *LPKBDLLHOOKSTRUCT, *PKBDLLHOOKSTRUCT;
+
+/*
+ * Structure used by WH_MOUSE_LL
+ */
+typedef struct tagMSLLHOOKSTRUCT {
+    POINT   pt;
+    DWORD   mouseData;
+    DWORD   flags;
+    DWORD   time;
+    DWORD   dwExtraInfo;
+} MSLLHOOKSTRUCT, *LPMSLLHOOKSTRUCT, *PMSLLHOOKSTRUCT;
+
+
 #define HKL_PREV   0
 #define HKL_NEXT   1
 
@@ -233,6 +266,7 @@ typedef struct
   /* WINDOWPLACEMENT flags */
 #define WPF_SETMINPOSITION      0x0001
 #define WPF_RESTORETOMAXIMIZED  0x0002
+
 
 /***** Dialogs *****/
 
